@@ -83,3 +83,5 @@ VDR Plugin 'elvis' Revision History
 2011-xx-xx: Version 0.1.3
 
 - Removed unnecessary mutexes.
+- Increased reader thread priority.
+- Reduced CPU load on certain VDR setups.
